--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-coming soon
+<style>
+    * {
+        font-family: gotham;
+    }
+</style>
+
+<h1>coming soon</h1>
+
+<h2>(C) Deyan Nikolov | deyannikolov.eu</h2>
