--- a/index.html
+++ b/index.html
@@ -1,9 +1,230 @@
-<style>
-    * {
-        font-family: gotham;
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>coming soon</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>United Gaming League</title>
 
-<h2>(C) Deyan Nikolov | deyannikolov.eu</h2>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/solid.js"
+      integrity="sha384-/BxOvRagtVDn9dJ+JGCtcofNXgQO/CCCVKdMfL115s3gOgQxWaX/tSq5V8dRgsbc" crossorigin="anonymous">
+  </script>
+  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/fontawesome.js"
+      integrity="sha384-dPBGbj4Uoy1OOpM4+aRGfAOc0W37JkROT+3uynUgTHZCHZNMHfGXsmmvYTffZjYO" crossorigin="anonymous">
+  </script>
+
+  <style>
+      #mainDiv {
+          min-height: 50vh;
+      }
+
+      nav {
+          font-size: 14px;
+      }
+
+      nav li {
+          margin: 3px
+      }
+  </style>
+
+
+</head>
+
+<body>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Include the navbar
+      fetch('html/navbar.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('navbar-placeholder').innerHTML = html;
+          document.getElementById('nachalo-nav').classList.add('active');
+        });
+    });
+
+    fetch('html/footer.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('footer-placeholder').innerHTML = html;
+        
+      });
+  </script>
+
+  <noscript>
+    <style>
+      #mainDiv {
+        display: none;
+      }
+
+      #navbar-placeholder {
+        display: none;
+      }
+
+      #footer-placeholder {
+        display: none;
+      }
+    </style>
+
+    Трябва да включите JavaScript, за да работи този сайт. Благодаря за разбирането - Деян Николов<br>
+  </noscript>
+
+  <div id="navbar-placeholder"></div>
+
+
+
+
+  <div class="container-fluid" id="mainDiv">
+
+    <br><br>
+
+    <div id="carouselExampleCaptions" class="carousel slide" style="border-radius: 25%;">
+      <style>
+        .crimg {
+          max-height: 600px;
+          /* Adjust the value based on your requirements */
+          object-fit: cover;
+          margin: auto;
+          /* Center the image horizontally */
+          border-radius: 25px;
+        }
+
+        .carousel-caption {
+          background-color: rgba(49, 49, 49, 0.356);
+          border-radius: 25px;
+        }
+      </style>
+
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/misc/home-gallery-one.jpg" class="crimg d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Gaming зала №1</h5>
+            <p>Залата за игра на League of Legends</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/misc/home-gallery-two.jpg" class="crimg d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Всички са добре дошли.</h5>
+            <p>Маратона е подходящ за хора от всякакви възрасти.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/misc/home-gallery-three.jpg" class="crimg d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Добре оборудвани зали</h5>
+            <p>Компютрите и конзолите в нашите зали са снабдени с най-нови компоненти позволяващи без проблема игра.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/misc/home-gallery-four.jpg" class="crimg d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Gaming зала №2</h5>
+            <p>Зала за Rocket League</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/misc/home-gallery-five.jpg" class="crimg d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>За всеки по нещо.</h5>
+            <p>Игрите в нашите маратони са подходщи за всички и всеки може да си намери нещо, което обича. Също така
+              играчите имат правото да избереат да играя с контролер или мишка и клавиатура</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <br><br>
+
+    <div class="row mb-2" style="width: 75%; margin: auto">
+      <style>
+        .newsimg {
+          height: 300px;
+          /* Adjust the value based on your requirements */
+          object-fit: cover;
+          margin: auto;
+          /* Center the image horizontally */
+        }
+      </style>
+      <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+          <div class="card-body d-flex flex-column align-items-start">
+            <strong class="d-inline-block mb-2 text-primary">UGL</strong>
+            <h3 class="mb-0">
+              <a class="text-dark" href="#">United Gaming League 2023</a>
+            </h3>
+            <div class="mb-1 text-muted">16 ноември 2023 г.</div>
+            <p class="card-text mb-auto">Официално започна регистрацията за UGL 2023</p>
+            <a href="#">Продължете четенето</a>
+          </div>
+          <img class="newsimg card-img-right flex-auto d-none d-md-block" alt="Thumbnail [200x25]"
+            style="width: 200px; " src="img/misc/news-1.jpg" data-holder-rendered="true">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+          <div class="card-body d-flex flex-column align-items-start">
+            <strong class="d-inline-block mb-2 text-success">СВЕТА</strong>
+            <h3 class="mb-0">
+              <a class="text-dark" href="#">UGL в световните медии</a>
+            </h3>
+            <div class="mb-1 text-muted">17 януари 2023 г.</div>
+            <p class="card-text mb-auto">UGL бе официално признатa за компания на 2022 в категория "Информационни и
+              комуникационни технологии, игри" </p>
+            <a href="#">Продължи четенето</a>
+          </div>
+          <img class="newsimg card-img-right flex-auto d-none d-md-block" alt="Thumbnail [200x250]"
+            style="width: 200px;" src="img/misc/company-of-year.jpg" data-holder-rendered="true">
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+
+
+
+
+  <div id="footer-placeholder"></div>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
+</html>
