--- a/author.html
+++ b/author.html
@@ -45,7 +45,7 @@
                 .then(response => response.text())
                 .then(html => {
                     document.getElementById('navbar-placeholder').innerHTML = html;
-                    document.getElementById('programa-nav').classList.add('active');
+                    document.getElementById('author-nav').classList.add('active');
                 });
         });
 
